# repliq

./: README.md  init_repliq.sh
crates/repliq-client/: Cargo.toml
crates/repliq-ipc/: Cargo.toml
crates/repliq-k8s/: Cargo.toml
repliq-client/: Cargo.toml
repliq-core/: Cargo.toml
repliq-ipc/: Cargo.toml
repliq-replicate/: Cargo.toml
repliq-replication/: Cargo.toml
