[package]
name = "repliq-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "repliq_core"
path = "src/lib.rs"

[[bench]]
name = "enqueue_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1" # For benchmarking
rand = "0.8" # For generating random test data
tempfile = "3.3" # For creating temporary files during tests