[package]
name = "repliq-replicate"
version = "0.1.0"
edition = "2021"

[lib]
name = "repliq_replicate"
path = "src/lib.rs"

[dependencies]
repliq-core = { path = "../repliq-core" }

[dev-dependencies]
criterion = "0.5.1" # For benchmarking
rand = "0.8" # For generating random test data
tempfile = "3.3" # For creating temporary files during tests
tokio = { version = "1", features = ["full"] } # For asynchronous testing